fix jumping

--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,4 @@ h3 {
   margin: 0;
   padding: 0;
   text-align: center;
-  color: white;
 }
